--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "PogChampion",
-  "version": "3.0",
+  "version": "3.1",
   "manifest_version": 2,
-  "description": "PogChamp",
+  "description": "Choose your own PogChamp image!",
   "content_scripts": [
     {
       "matches": ["http://twitch.tv/*", "https://twitch.tv/*", "https://www.twitch.tv/*", "http://www.twitch.tv/*"],
